fontsampler-css.css
/*======================================
  Selectric
======================================*/
.selectric-wrapper {
  position: relative;
  cursor: pointer;
}
.selectric-responsive {
  width: 100%;
}
.selectric {
  border: 0 solid #ffffff;
  background: #ffffff;
  position: relative;
  border-radius: 0;
}
.selectric .label {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0 30px 0 0;
  font-size: inherit;
  line-height: 30px;
  color: #333333;
  height: 30px;
  border-bottom: 1px solid #333;
}
.selectric .button {
  background: #ffffff;
  border-radius: 0;
  border-bottom: 1px solid #333;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  width: 30px;
  height: 30px;
  color: #333333;
  text-align: center;
  font: 0/0 a;
  *font: 1px Lucida Sans Unicode, Arial Unicode MS, Arial;
}
.selectric .button:after {
  content: " ";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;
  width: 0;
  height: 0;
  border: 4px solid transparent;
  border-top-color: #333333;
  border-bottom: none;
}
.selectric-hover .selectric {
  border-color: #333333;
}
.selectric-hover .selectric .button {
  color: #333333;
}
.selectric-hover .selectric .button:after {
  border-top-color: #333333;
}
.selectric-open {
  z-index: 9999;
}
.selectric-open .selectric {
  border-color: #333333;
  background: #ffffff;
}
.selectric-open .selectric-items {
  display: block;
}
.selectric-disabled {
  filter: alpha(opacity=50);
  opacity: 0.5;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.selectric-hide-select {
  position: relative;
  overflow: hidden;
  width: 0;
  height: 0;
}
.selectric-hide-select select {
  position: absolute;
  left: -100%;
  display: none;
}
.selectric-input {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  margin: 0 !important;
  padding: 0 !important;
  width: 1px !important;
  height: 1px !important;
  outline: none !important;
  border: none !important;
  *font: NaN a !important;
  background: none !important;
}
.selectric-temp-show {
  position: absolute !important;
  visibility: hidden !important;
  display: block !important;
}
/* Items box */
.selectric-items {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background: #F8F8F8;
  z-index: -1;
  box-shadow: 0 0 10px -6px;
}
.selectric-items .selectric-scroll {
  height: 100%;
  overflow: auto;
}
.selectric-above .selectric-items {
  top: auto;
  bottom: 100%;
}
.selectric-items ul,
.selectric-items li {
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 12px;
  line-height: 20px;
  min-height: 20px;
}
.selectric-items li {
  display: block;
  padding: 8px;
  color: #666;
  cursor: pointer;
}
.selectric-items li.selected {
  background: #EFEFEF;
  color: #444;
}
.selectric-items li:hover {
  background: #F0F0F0;
  color: #444;
}
.selectric-items .disabled {
  filter: alpha(opacity=50);
  opacity: 0.5;
  cursor: default !important;
  background: none !important;
  color: #666 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.selectric-items .selectric-group .selectric-group-label {
  font-weight: bold;
  padding-left: 10px;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: none;
  color: #444;
}
.selectric-items .selectric-group.disabled li {
  filter: alpha(opacity=100);
  opacity: 1;
}
.selectric-items .selectric-group li {
  padding-left: 25px;
}
.rangeslider,
.rangeslider__fill {
  display: block;
}
.rangeslider {
  background: #efefef;
  position: relative;
}
.rangeslider--horizontal {
  height: 1px;
  width: 100%;
  clear: both;
}
.rangeslider--vertical {
  width: 20px;
  min-height: 150px;
  max-height: 100%;
}
.rangeslider--disabled {
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
  opacity: 0.4;
}
.rangeslider__fill {
  background: #333;
  position: absolute;
}
.rangeslider--horizontal .rangeslider__fill {
  top: 0;
  height: 100%;
}
.rangeslider--vertical .rangeslider__fill {
  bottom: 0;
  width: 100%;
}
.rangeslider__handle {
  background: #333;
  cursor: pointer;
  display: inline-block;
  width: 10px;
  height: 10px;
  position: absolute;
  border-radius: 50%;
}
.rangeslider__handle:after {
  content: "";
  display: block;
  margin: auto;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-size: 100%;
  border-radius: 50%;
}
.rangeslider__handle:active {
  background-size: 100%;
}
.rangeslider--horizontal .rangeslider__handle {
  top: -4px;
  touch-action: pan-y;
  -ms-touch-action: pan-y;
}
.rangeslider--vertical .rangeslider__handle {
  left: -4px;
  touch-action: pan-x;
  -ms-touch-action: pan-x;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-interface-row {
  clear: both;
  position: relative;
  overflow: visible;
  margin: 0 0 1em;
  font-size: smaller;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-interface-row:after {
  clear: both;
  content: '';
  display: block;
  width: 100%;
}
.fontsampler-wrapper .fontsampler-interface button.fontsampler-toggle {
  height: 30px;
  width: 30px;
  padding: 0;
  border-radius: 3px;
  overflow: hidden;
  outline: none;
  opacity: 0.75;
  transition: opacity 0.2s ease-in-out;
}
.fontsampler-wrapper .fontsampler-interface button.fontsampler-toggle.fontsampler-toggle-on {
  opacity: 1;
}
.fontsampler-wrapper .fontsampler-interface button.fontsampler-toggle img {
  font-size: 12px;
  line-height: 10px;
  float: left;
  display: block;
  width: 100%;
}
.fontsampler-wrapper .fontsampler-interface label.fontsampler-slider {
  box-sizing: border-box;
  display: block;
  float: left;
  position: relative;
  padding: 0 5px;
  width: 33%;
}
.fontsampler-wrapper .fontsampler-interface label.fontsampler-slider:first-of-type {
  left: -5px;
}
.fontsampler-wrapper .fontsampler-interface label.fontsampler-slider:last-of-type {
  right: -5px;
}
.fontsampler-wrapper .fontsampler-interface label.fontsampler-slider .slider-label {
  float: left;
  margin-bottom: 0.5em;
}
.fontsampler-wrapper .fontsampler-interface label.fontsampler-slider .slider-value {
  float: right;
  margin-bottom: 0.5em;
}
.fontsampler-wrapper .fontsampler-interface label.fontsampler-slider input {
  clear: left;
  display: block;
  width: 100%;
}
.fontsampler-wrapper .fontsampler-interface select,
.fontsampler-wrapper .fontsampler-interface .selectric-wide,
.fontsampler-wrapper .fontsampler-interface .selectric-small {
  display: block;
  float: left;
}
.fontsampler-wrapper .fontsampler-interface select[name="font-selector"],
.fontsampler-wrapper .fontsampler-interface select[name="sample-text"],
.fontsampler-wrapper .fontsampler-interface .selectric-wide {
  left: -5px;
  padding: 0 5px;
  margin-right: 5px;
  width: 33%;
}
.fontsampler-wrapper .fontsampler-interface select[name="alignment"],
.fontsampler-wrapper .fontsampler-interface select[name="invert"],
.fontsampler-wrapper .fontsampler-interface .selectric-small {
  width: 10%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect {
  box-sizing: border-box;
  float: left;
  padding-right: 5px;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect.one-item {
  width: 5.66666667%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect.one-item > button {
  width: 100%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect.two-items {
  width: 10.66666667%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect.two-items > button {
  width: 50%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect.three-items {
  width: 15.33333333%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect.three-items > button {
  width: 33%;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect > button {
  background: #fff;
  border: 0;
  border-bottom: 1px solid #333;
  font-size: inherit;
  font-family: inherit;
  color: #333;
  font-weight: inherit;
  height: 30px;
  line-height: 4px;
  text-transform: none;
  border-radius: 0;
  display: block;
  float: left;
  padding: 0 2px;
  margin: 0;
  text-align: center;
  opacity: 0.5;
  outline: none;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect > button img {
  display: block;
  max-width: 15px;
  max-height: 15px;
  margin: 0 auto;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect .fontsampler-multiselect-selected {
  opacity: 1;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-opentype-features {
  display: none;
  position: absolute;
  width: auto;
  right: 0;
  top: 30px;
  text-align: right;
  background: #ffffff;
  height: 30px;
  padding: 5px;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-opentype-features.shown {
  display: block;
}
.fontsampler-wrapper .fontsampler-interface .fontsampler-opentype-features button.fontsampler-toggle {
  height: 20px;
  width: 20px;
}
.fontsampler-wrapper .fontsampler {
  clear: both;
  margin-bottom: 20px;
  padding: 10px 20px;
  transition: all 0.2s ease-out;
}
.fontsampler-wrapper .fontsampler.invert {
  background: #333333;
  color: #ffffff;
}
/* css_color_text */
.fontsampler-interface .fontsampler {
    color: #df3e3e;
}

/* css_color_background */
.fontsampler-interface .fontsampler {
    background: #402a2a;
}

/* css_color_label */
/* css_size_label */
/* css_fontfamily_label */
.fontsampler-interface .fontsampler-slider .slider-label,
.fontsampler-interface .fontsampler-slider .slider-value,
.fontsampler-interface .selectric .label,
.fontsampler-interface .selectric-items li {
    color: #333333;
    font-size: 10px;
    font-family: Arial;
}

/* css_color_highlight */
.fontsampler-interface .selectric-items {
    background: #e55151;
}

/* css_color_highlight_hover */
.fontsampler-interface .selectric-items li:hover {
    background: #e55151_hover;
}

/* css_color_line */
.fontsampler-interface .selectric-open .selectric,
.fontsampler-interface .selectric .label,
.fontsampler-interface .selectric .button,
.fontsampler-wrapper .fontsampler-interface .fontsampler-multiselect > button,
.fontsampler-interface .rangeslider__fill {
    border-bottom: 1px solid #1e73be;
}

/* css_color_handle */
.fontsampler-interface .rangeslider__handle {
    background: #dd9933;
}

/* css_color_icon_active */
/* css_color_icon_inactive */

